--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9"
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.0.2",
