--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "mime-types": "^2.1.26",
+    "mime": "^2.4.4",
     "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
